# 16qam_modulator

./: .gitmodules  LICENSE  README.md
.github/workflows/: 16qam_receiver_linux.yml  16qam_receiver_windows.yml
circuit/qam_transmitter/: qam_transmitter.kicad_pro  qam_transmitter.kicad_sch
receiver/: .gitignore  CMakeLists.txt  README.md  aplay_port.sh  fx.bat  get_live_data.sh  get_test_sample.sh  vcpkg.json  vlc.sh
receiver/src/: additive_scrambler.h  app.h  audio_processor.cpp  audio_processor.h  carrier_demodulator_spec.h  carrier_dsp.cpp  carrier_dsp.h  carrier_dsp_blocks.cpp  carrier_dsp_blocks.h  constellation.cpp  constellation.h  crc8.h  encoding.h  filter_designer.cpp  filter_designer.h  filters.h  frame_decoder.cpp  frame_decoder.h  frame_synchroniser.h  pcm_play.cpp  polyphase_filter.h  preamble_detector.cpp  preamble_detector.h  preamble_filter.h  qam_demodulator.cpp  qam_demodulator.h  read_data.cpp  replay_data.cpp  simulate_transmitter.cpp  util.h  view_data.cpp
receiver/src/audio/: audio_processor.cpp  audio_processor.h
receiver/src/constellation/: constellation.cpp  constellation.h
receiver/src/decoder/: convolutional_encoder.cpp  crc32.h  crc8.h  frame_decoder.cpp  frame_decoder.h  phil_karn_viterbi_decoder.cpp  preamble_detector.cpp  preamble_detector.h  preamble_filter.h  viterbi_config.h  viterbi_decoder.cpp
receiver/src/demod/: audio_processor.cpp  audio_processor.h  carrier_demodulator_spec.h  carrier_dsp.cpp  carrier_dsp.h  carrier_dsp_blocks.h  constellation.h  convolutional_encoder.h  encoding.h  frame_decoder.cpp  frame_decoder.h  phil_karn_viterbi_decoder.cpp  phil_karn_viterbi_decoder.h  preamble_detector.h  preamble_filter.h  qam_demodulator.cpp  qam_demodulator.h  viterbi_decoder.h
receiver/src/demodulator/: N_level_crossing_detector.h  delay_line.h  pll_mixer.cpp  pll_mixer.h  qam_sync.cpp  qam_sync.h  qam_sync_buffers.cpp  qam_sync_buffers.h  qam_sync_spec.h  ted_clock.h  trigger_cooldown.h  zero_crossing_detector.h
receiver/src/dsp/: common.h  filter_designer.cpp  filter_designer.h  polyphase_filter.h
receiver/toolchains/ubuntu/: install_packages.sh
receiver/toolchains/windows/: README.md  create_package.sh
transmitter/: .gitignore
transmitter/atmega328p/: .gitignore  README.md  transmitter.atsln
transmitter/atmega328p/transmitter/: conv_enc.c  crc32.c  scrambler.c
transmitter/stm32f401/: .cproject  .gitignore  .mxproject  .project  16qam_transmitter.ioc  Blink.ioc  README.md
transmitter/stm32f401/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
transmitter/stm32f401/Core/Src/: conv_enc.c  conv_enc.h  crc8.c  crc8.h  main.c  scrambler.c  scrambler.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c
transmitter/transmitter/: conv_enc.c  conv_enc.h  crc32.h  crc8.c  crc8.h  main.c  scrambler.c  scrambler.h  transmitter.componentinfo.xml  transmitter.cproj
